# bbtautau-hists

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  setup.sh
.github/workflows/: cmake.yml
examples/: Example_BukinBinning.cpp  Example_CheckSyst.cpp  Example_Morphing.cpp  Example_PseudoData.cpp  Example_Pulls.cpp  Example_SamplingDist.cpp  Example_W2R.cpp  Example_WS.cpp  Example_WtDS.cpp  Example_WtGen.cpp  Example_ZtautauMG.cpp  Example_ZtautauRew.cpp  Example_ZtautauUnc1.cpp  Example_ZtautauUnc2.cpp  Example_ZtautauUnc3.cpp  Example_bbll.cpp  Example_ttbarGen.cpp  Example_ttbarKine.cpp  Example_ttbarOTF.cpp  ExamplesInclude.h  ExamplesInclude_WS.h  HadHadSR_v15.cpp  HadHadSR_v15_yield.cpp
examples/thesis/: Example_Binning.cpp  Example_FFCR.cpp  Example_Input_WS.cpp  Example_LastBin_WS.cpp  Example_MJVR.cpp  Example_MVAinput.cpp  Example_MVAouput.cpp  Example_OverFit.cpp  Example_SR.cpp  Example_SR_Lephad_WS.cpp  Example_SR_WS.cpp  Example_SR_WS_Klam.cpp  Example_SystStop.cpp  Example_SystTTbar.cpp  Example_SystZhf.cpp  Example_TTbarSF.cpp  Example_TTbarVR.cpp  Example_ZCR.cpp  Example_ZVR.cpp
exec/: gen_pseudodata_zcr.cpp  main.cpp  run_pseudodata.cpp  shtid.cpp  test.cpp  upper_limit_calc.cpp  upper_limit_calc_roostat.cpp
exec/unit_tests/: utest_binning.cpp  utest_math.cpp
ext/: LinkDef.h  Minimization.cpp  Minimization.h  RooExpandedFitResult.cpp  WSMakerBinning.cpp  WSMakerBinning.h  catch.cpp
ihep_run/: pd.sh  pulls.sh  ranking.sh  sampling.sh  useful.sh
jobs/: run_w2r.sh  run_w2r_lephad.sh  submit_pd.sh  submit_sampling.sh
scripts/: FF.C  SF.C  SampDist.C  mBBreso.C  muhatlt0_teststat.py
src/: AutoBinningTool.cpp  AutoBinningTool.h  Colors.h  CommonInclude.h  CommonInclude_WS.h  CompTool.cpp  CompTool.h  Config.cpp  Config.h  DistributionTool.cpp  DistributionTool.h  DrawStackTool.cpp  DrawStackTool.h  DrawStackTool_WS.cpp  DrawStackTool_WS.h  HistTool.cpp  HistTool.h  Processes.cpp  Processes.h  PullsTool.h  RankingTool.h  SystCompTool.cpp  SystCompTool.h  Systematics.cpp  Systematics.h  Utils.cpp  Utils.h  Utils_WS.cpp  Utils_WS.h  WorkSpace.cpp  WorkSpace.h  WorkspaceToRoot.cpp  WorkspaceToRoot.h  WorkspaceTool.cpp  WorkspaceTool.h
